--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta charset="UTF-8">
   <title>myMess</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com;
+      script-src 'self' https://*.googleapis.com 'unsafe-inline' 'unsafe-eval';
+      style-src 'self' 'unsafe-inline';">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
