--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- GoogleMaps API Key -->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCM9y1hjsZVknpD7COCkP5-F4whLW4KRTs"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCM9y1hjsZVknpD7COCkP5-F4whLW4KRTs"></script>
 
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
